# docs/swagger.yaml
@@ -20,6 +20,8 @@ paths:
       - application/json
       responses: {}
       summary: List Releases
+      tags:
+      - Releases
   /api/clusters/:clusterId/namespaces/:namespace/releases/:release:
     delete:
       consumes:
@@ -28,13 +30,17 @@ paths:
       - application/json
       responses: {}
       summary: Uninstall Release
+      tags:
+      - Releases
     get:
       consumes:
       - application/json
       produces:
       - application/json
       responses: {}
-      summary: Get Release Info
+      summary: Get Releases Info
+      tags:
+      - Releases
     post:
       consumes:
       - application/json
@@ -42,21 +48,64 @@ paths:
       - application/json
       responses: {}
       summary: Install Release
+      tags:
+      - Releases
+    put:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses: {}
+      summary: Upgrade Release
+      tags:
+      - Releases
+  /api/clusters/:clusterId/namespaces/:namespace/releases/:release/histories:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses: {}
+      summary: Get Release Histories
+      tags:
+      - Releases
+  /api/clusters/:clusterId/namespaces/:namespace/releases/:release/resources:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses: {}
+      summary: Get Release Resources
+      tags:
+      - Releases
+  /api/clusters/:clusterId/namespaces/:namespace/releases/:release/versions/:reversion:
+    put:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses: {}
+      summary: Rollback Release
+      tags:
+      - Releases
   /api/repositories:
     get:
       consumes:
       - application/json
-      description: List Repository
       produces:
       - application/json
       responses: {}
       summary: List Repository
+      tags:
+      - Repository
     post:
       consumes:
       - application/json
-      description: Add Repository
       produces:
       - application/json
       responses: {}
       summary: Add Repository
+      tags:
+      - Repository
 swagger: "2.0"
